[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/monster_dead.png" type="Texture" id=1]
[ext_resource path="res://assets/monster_damaged.png" type="Texture" id=2]
[ext_resource path="res://assets/monster_idle.png" type="Texture" id=3]
[ext_resource path="res://assets/monster_attack1.png" type="Texture" id=4]
[ext_resource path="res://assets/monster_attack2.png" type="Texture" id=5]
[ext_resource path="res://assets/monster_leap.png" type="Texture" id=6]
[ext_resource path="res://assets/monster_walk2.png" type="Texture" id=7]
[ext_resource path="res://assets/monster_walk1.png" type="Texture" id=8]
[ext_resource path="res://Player2.gd" type="Script" id=9]
[ext_resource path="res://assets/monster_shielding.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "block",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "damaged",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "attack",
"speed": 2.5
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.5141
height = 17.5814

[sub_resource type="CapsuleShape2D" id=3]
radius = 24.1641
height = 15.5301

[sub_resource type="CapsuleShape2D" id=4]

[node name="Player2" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483655
script = ExtResource( 9 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="HurtboxP2" type="Area2D" parent="."]
position = Vector2( -38.9768, 20.2679 )
collision_layer = 2

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxP2"]
position = Vector2( 39, -18.369 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="HitboxShape" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -28, 12.5 )
rotation = 1.5708
shape = SubResource( 4 )
disabled = true
[connection signal="area_entered" from="HurtboxP2" to="." method="_on_HurtBox_area_entered"]
